tests/snapshots/ui_snapshots__running_upstream.snap
---
source: tests/ui_snapshots.rs
expression: render_to_string(&app)
---
"╭ ● · be32e97af5b7 · up 0m 42s ────────────────────────────────────────────────╮"
"│ Conn   active 1  reading 0  writing 1  waiting 0                             │"
"│┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄│"
"│ RPS ██████████████████████████████████████ 510/s       │  req  8.5 K         │"
"│ IN  ████████████████████▏░░░░░░░░░░░░░░░░░ 44.5 KB/s   │  rx  743.0 KB       │"
"│ OUT ██████████████████████████████████████ 84.0 KB/s   │  tx  1.4 MB         │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭ Upstream Servers · 3 ────────────────────────────────────────────────────────╮"
"│   ZONE       RPS↓     2xx%    4xx%    5xx%    p95     IN/s    OUT/s   STATE  │"
"│▶  backend_ap    90.1  100.0%    0.0%    0.0%     ~0ms  7.4 KB 14.9 KB up     │"
"│   backend_ap    90.0  100.0%    0.0%    0.0%     ~0ms  7.4 KB 14.9 KB up     │"
"│   backend_we       0       —       —       —     ~0ms     0 B     0 B up     │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"F1Help F4Filter F5Sort F10Quit  Tab:Zone Enter:Detail                           "
